Added About and Contact pages with navigation

--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <title>My First Github Page</title>
 </head>
 <body>
-    <head>
+    <header>
         <h1>Welcome To My Website!</h1>
-    </head>
+    </header>
+<nav>
+    <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+</nav>
     <main>
         <p>This is simple page hosted by Github Pages</p>
         <P>A webpage is a digital document that is accessed through the internet using a web browser. Web Pages are written mainly using HTML, which structures the content on the page</P>
         <p>Here's a picture of a cute cat</p>
-<img src="https://placekitten.com/200/300" alt="A cute cat">
+        				<img src="https://placekitten.com/200/300" alt="A cute cat">
 <p>Visit<a href="https://github.com">GitHub</a>to learn more about coding</p>
     </main>
     <footer>
