--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <p>This is simple page hosted by Github Pages</p>
         <P>A webpage is a digital document that is accessed through the internet using a web browser. Web Pages are written mainly using HTML, which structures the content on the page</P>
         <p>Here's a picture of a cute cat</p>
-        				<img src="https://placekitten.com/200/300" alt="A cute cat">
-<p>Visit<a href="https://github.com">GitHub</a>to learn more about coding</p>
+        				<img src="https://cdn.omlet.com/images/cache/850/567/breed_abyssinian_cat.webp" alt="A cute cat">
+<p>Visit<a href="https://github.com">GitHub</a> to learn more about coding</p>
     </main>
     <footer>
         <p>&copy;2025 Aobakwe</p>
